<resources>
    <string name="app_name">Strategic Int</string>
    <string name="persons_of_interest">Persons of Interest</string>
    <string name="suspects_database">Suspects Database</string>
    <string name="ct_analytics">CT analytics</string>
    <string name="ct_analytics1">CT-Analytics</string>
    <string name="attack_database">Attack Database</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="exit">Log Out</string>
    <string name="suspect_name">Suspect Name</string>
    <string name="a_short_description_of_the_suspect">A short Description of the suspect</string>
    <string name="date">Date</string>
    <string name="enter_suspect_s_details">Enter Suspect\'s Details</string>
    <string name="name">Name</string>
    <string name="save1">SAVE</string>
    <string name="cancel1">CANCEL</string>
    <string name="choose_an_image">Choose an Image</string>
    <string name="enter_suspect_s_description">Enter Suspect\'s Description</string>
    <string name="enter_other_names_of_the_suspect_a_k_a">Enter other names of the suspect(A.K.A)</string>
    <string name="descriptiona">Descriptiona</string>
    <string name="date2">Date</string>
    <string name="suspect_s_name2">Suspect\'s Name</string>
    <string name="key_friends3">Key Friends</string>
    <string name="other_names4">Other Names</string>
    <string name="aka">AKA</string>
    <string name="suspect_s_description_here1">Suspect\'s Description Here.........</string>
    <string name="keyfriends6">KeyFriends</string>
    <string name="keyfriends0">KeyFriends</string>
    <string name="link0">Link</string>
    <string name="link8">link</string>
    <string name="date3">DATE</string>
    <string name="suspect_s_name5">Suspect\'s Name</string>
    <string name="s_i_suspects_database0">S.I SUSPECTS DATABASE</string>
    <string name="strategic_intelligence4">STRATEGIC INTELLIGENCE</string>
    <string name="add_new3">Add New</string>
    <string name="view_all7">View All</string>
    <string name="s_i_suspects_database7">S.I SUSPECTS DATABASE</string>
    <string name="strategic_intelligence7">STRATEGIC INTELLIGENCE</string>
    <string name="counter_terrorism_unit8">Counter-Terrorism Unit</string>
    <string name="add_a_suspect_to_the_database4">Add a Suspect to the database</string>
    <string name="suspect_s_name3">Suspect\'s Name</string>
    <string name="description4">Description</string>
    <string name="keyfriends_on_facebook3">KeyFriends on Facebook</string>
    <string name="enter_facebook_link3">Enter Facebook Link</string>
    <string name="choose_image3">Choose Image</string>
    <string name="save0">SAVE</string>
    <string name="cancel5">CANCEL</string>
    <string name="place_holder2">Place_holder</string>
    <string name="suspect_s_name0">Suspect\'s Name</string>
    <string name="date6">Date</string>
    <string name="description0">Description</string>
    <string name="key_friends9">Key Friends</string>
    <string name="key_friends7">Key Friends</string>
</resources>
