<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
            <TextView
                android:id="@+id/headText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#0f0f0f"
                android:text="@string/enter_suspect_s_details"
                />
            <EditText
                android:layout_marginTop="8dp"
                android:id="@+id/nameEditText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/name"
                android:inputType="text"/>
            <EditText
                android:id="@+id/descritionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/enter_suspect_s_description"
                android:inputType="text"
                android:minLines="3"/>
            <EditText
                android:id="@+id/keyFriendsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/key_friends3"
                android:inputType="text"
                android:maxLines="2"/>
            <EditText
                android:id="@+id/akaEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/enter_other_names_of_the_suspect_a_k_a"
                android:inputType="text"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/buttonChooseImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/Dark_orage"
                    android:textColor="@color/Bluekabisa"
                    android:text="@string/choose_an_image"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:elevation="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>

                <ImageView
                    android:id="@+id/chooseImageView"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/uploadBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#ffffff"
                    android:elevation="8dp"
                    android:text="@string/save1"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/Bluekabisa"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:textColor="@color/Bluekabisa"
                    android:text="@string/cancel1"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold"
                    android:elevation="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>