<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.DetailsActivity"
    android:background="@color/Blue"
    tools:showIn="@layout/activity_detail">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_margin="3dp"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="5dp"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/teacherDetailImageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nameDetailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:padding="5dp"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="@string/suspect_s_name5" />
                <TextView
                    android:id="@+id/dateDetailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:padding="5dp"
                    android:maxLines="1"
                    android:layout_marginEnd="5dp"
                    android:text="@string/date3" />



                    <TextView
                        android:id="@+id/descriptionDetailTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:padding="5dp"
                        android:textColor="#0f0f0f"
                        android:minLines="4"
                        android:text="@string/suspect_s_description_here1" />
                <TextView
                    android:id="@+id/keyFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="5dp"
                    android:maxLines="3"

                    android:layout_marginEnd="5dp"
                    android:text="@string/keyfriends6"
                    />
                <TextView
                    android:id="@+id/TextViewKeyFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:padding="5dp"
                    android:maxLines="3"
                    android:textColor="@color/Bluekabisa"
                    android:layout_marginEnd="5dp"
                    android:text="@string/keyfriends0"
                    android:textStyle="italic"/>
                <TextView
                    android:id="@+id/Link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="5dp"
                    android:maxLines="3"

                    android:layout_marginEnd="5dp"
                    android:text="@string/link0"
                    />
                <TextView
                    android:id="@+id/TextViewLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:padding="5dp"
                    android:maxLines="3"
                    android:textColor="@color/Bluekabisa"
                    android:layout_marginEnd="5dp"
                    android:text="@string/link8"
                    android:textStyle="italic"/>



                <!--<TextView-->
                    <!--android:id="@+id/categoryDetailTextView"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
                    <!--android:padding="5dp"-->
                    <!--android:textStyle="italic"-->
                    <!--android:text="Category : Zen Quotes" />-->


            </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</RelativeLayout>
