<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:gravity="center_horizontal">




    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/txtdash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="STRATEGIC  INTELLIGENCE"
            android:textColor="#F7B81C"
            android:textSize="18sp" />



        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/silogo" />

    </RelativeLayout>


    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="16dp"
        android:rowCount="3">


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/database" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/suspects_database"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"

            app:cardCornerRadius="8dp"
            app:cardElevation="28dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="88dp"
                    android:layout_height="92dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/analysis" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="47dp"
                    android:text="@string/ct_analytics1"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"

            app:cardCornerRadius="8dp"
            app:cardElevation="28dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="93dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/attacks" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:text="@string/attack_database"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"

            app:cardCornerRadius="8dp"
            app:cardElevation="28dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="108dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/poi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/persons_of_interest"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"

            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="74dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/calenda" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:text="@string/notifications"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"

            app:cardCornerRadius="8dp"
            app:cardElevation="28dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="114dp"
                    android:layout_height="77dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/exit" />

                <TextView
                    android:layout_width="113dp"
                    android:layout_height="47dp"
                    android:text="@string/exit"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </GridLayout>



</LinearLayout>


